// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works for a community 1`] = `
Object {
  "graphql": Object {
    "query": "query (
  $slug: String,
  $sortBy: String,
  $offset: Int,
  $search: String,
  $filter: String,
  $topic: Int,
  $first: Int
) {
  community(slug: $slug) {
    id
    slug
    name
    avatarUrl
    bannerUrl
    postCount
    
posts(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  search: $search,
  filter: $filter,
  topic: $topic,
  order: \\"desc\\"
) {
  hasMore
  items {
    id
    title
    details
    type
    creator {
      id
      name
      avatarUrl
      tagline
    }
    createdAt
    updatedAt
    commenters(first: 3) {
      id
      name
      avatarUrl
    }
    commentersTotal
    linkPreview {
      id
      title
      url
      imageUrl
    }
    votesTotal
    myVote
    communities {
      id
      name
      slug
    }
  }
}
  }
}",
    "variables": Object {
      "filter": "offer",
      "first": 20,
      "networkSlug": undefined,
      "offset": 20,
      "search": "gardening",
      "slug": undefined,
      "sortBy": undefined,
      "topic": undefined,
    },
  },
  "meta": Object {
    "extractModel": "Community",
    "extractQueryResults": Object {
      "getItems": [Function],
    },
  },
  "type": "FETCH_POSTS",
}
`;

exports[`works for all communities 1`] = `
Object {
  "graphql": Object {
    "query": "query (
  $sortBy: String,
  $offset: Int,
  $search: String,
  $filter: String,
  $topic: ID,
  $first: Int
) {
  
posts(
  first: $first,
  offset: $offset,
  sortBy: $sortBy,
  search: $search,
  filter: $filter,
  topic: $topic,
  order: \\"desc\\"
) {
  hasMore
  items {
    id
    title
    details
    type
    creator {
      id
      name
      avatarUrl
      tagline
    }
    createdAt
    updatedAt
    commenters(first: 3) {
      id
      name
      avatarUrl
    }
    commentersTotal
    linkPreview {
      id
      title
      url
      imageUrl
    }
    votesTotal
    myVote
    communities {
      id
      name
      slug
    }
  }
}
}",
    "variables": Object {
      "filter": "request",
      "first": 20,
      "networkSlug": undefined,
      "offset": 20,
      "search": "graphic design",
      "slug": undefined,
      "sortBy": undefined,
      "topic": undefined,
    },
  },
  "meta": Object {
    "extractModel": "Post",
    "extractQueryResults": Object {
      "getItems": [Function],
    },
  },
  "type": "FETCH_POSTS",
}
`;
